src/snapshots/ruff__linter__tests__D207_D.py.snap
---
source: src/linter.rs
expression: checks
---
- kind: NoUnderIndentation
  location:
    row: 227
    column: 1
  end_location:
    row: 227
    column: 1
  fix:
    patch:
      content: "    "
      location:
        row: 227
        column: 1
      end_location:
        row: 227
        column: 1
    applied: false
- kind: NoUnderIndentation
  location:
    row: 435
    column: 1
  end_location:
    row: 435
    column: 1
  fix:
    patch:
      content: "                                    "
      location:
        row: 435
        column: 1
      end_location:
        row: 435
        column: 5
    applied: false

